fix: user table name overflow issue fixed

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -97,24 +97,6 @@ img {
 
 
 
-::-webkit-scrollbar {
-  display: none;
-}
-
-/* Firefox */
-html {
-  scrollbar-width: none;
-}
-
-/* IE, Edge (old) */
-body {
-  -ms-overflow-style: none;
-}
-
-
-
-
-
 
 
 
